--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,15 +27,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
-
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'nl.psdcompany:duo-navigation-drawer:2.0.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.6'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.6.0'
 }
